--- a/FlashCardGame.UI/App.xaml
+++ b/FlashCardGame.UI/App.xaml
@@ -1,8 +1,9 @@
 ﻿<prism:PrismApplication x:Class="FlashCardGame.UI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	     xmlns:prism="http://prismlibrary.com/"
-             xmlns:local="clr-namespace:FlashCardGame.UI">
+	         xmlns:prism="http://prismlibrary.com/"
+             xmlns:local="clr-namespace:FlashCardGame.UI"
+             DispatcherUnhandledException="Application_DispatcherUnhandledException">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
