--- a/FlashCardGame.UI/Views/MainWindow.xaml
+++ b/FlashCardGame.UI/Views/MainWindow.xaml
@@ -3,6 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:prism="http://prismlibrary.com/"
         prism:ViewModelLocator.AutoWireViewModel="True"
+        WindowState="Maximized"
+        WindowStyle="ThreeDBorderWindow"
         Title="{Binding Title}" Height="350" Width="525">
     <Grid>
         <ContentControl prism:RegionManager.RegionName="ContentRegion" />
