--- a/Modules/FlashCardGame.Modules.Game/Views/GameView.xaml
+++ b/Modules/FlashCardGame.Modules.Game/Views/GameView.xaml
@@ -19,13 +19,11 @@
             <ComboBox Style="{StaticResource MaterialDesignFloatingHintComboBox}"
                       materialDesign:HintAssist.HelperText="Select one Operator"
                       ItemsSource="{Binding Path=Operators}"
-                      SelectedItem="{Binding Path=SelectedOperator, Mode=TwoWay}"
+                      SelectedItem="{Binding Path=SelectedOp}"
                       FontSize="18" Margin="10, 10, 10, 10">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="{Binding Icon}" Height="20" Width="20" />
-                        </StackPanel>
+                        <materialDesign:PackIcon Kind="{Binding Icon}" Height="30" Width="30" />
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>
