--- a/Modules/FlashCardGame.Modules.Game/Views/AnswerFeedbackView.xaml
+++ b/Modules/FlashCardGame.Modules.Game/Views/AnswerFeedbackView.xaml
@@ -4,11 +4,23 @@
              xmlns:prism="http://prismlibrary.com/"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <materialDesign:Card VerticalAlignment="Center" HorizontalAlignment="Center"  Width="400" Height="100" materialDesign:ShadowAssist.ShadowDepth="Depth5" Padding="32" Margin="16">
+    <materialDesign:Card Background="LightGreen" VerticalAlignment="Center" HorizontalAlignment="Center" materialDesign:ShadowAssist.ShadowDepth="Depth5" Padding="32" Margin="16">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <materialDesign:PackIcon Kind="NoticeBoard" Grid.Row="0" Height="40" Width="40" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            <Grid Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Label Grid.Row="0" Content="{Binding Feedback}" Height="100" Width="100" FontSize="18" Margin="10, 10, 10, 10"/>
+                <materialDesign:PackIcon Kind="{Binding Icon}" Height="{Binding IconHeight}" Width="{Binding IconWidth}" Grid.Row="1" Margin="10, 10, 10, 10" />
+              
+            </Grid>
 
-        <StackPanel Orientation="Horizontal">
-            <materialDesign:PackIcon Kind="{Binding Icon}" Height="30" Width="30" />
-            <Label Content="{Binding Feedback}" />
-        </StackPanel>
+        </Grid>
     </materialDesign:Card>
 </UserControl>
