--- a/Modules/FlashCardGame.Modules.Game/Views/ScoreBoardView.xaml
+++ b/Modules/FlashCardGame.Modules.Game/Views/ScoreBoardView.xaml
@@ -4,16 +4,45 @@
              xmlns:prism="http://prismlibrary.com/"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <materialDesign:Card VerticalAlignment="Center" HorizontalAlignment="Center"  Width="400" Height="100" materialDesign:ShadowAssist.ShadowDepth="Depth5" Padding="32" Margin="16">
+    
+    <materialDesign:Card VerticalAlignment="Center" HorizontalAlignment="Center"  Width="800" Height="800" materialDesign:ShadowAssist.ShadowDepth="Depth5" Padding="32" Margin="16">
+        <Grid Background="AliceBlue">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
 
-        <StackPanel Orientation="Horizontal">
-            <materialDesign:PackIcon Kind="Score"  Height="32" Width="32" />
-            <Label Content="Your current score" />
-            <Label Content="{Binding TotalScore}" />
-            <Label Content="Your correct" />
-            <Label Content="{Binding CorrectCount}" />
-            <Label Content="Your wrong" />
-            <Label Content="{Binding WrongCount}" />
-        </StackPanel>
+            <materialDesign:PackIcon Kind="Score" Grid.Row="0" Height="40" Width="40" HorizontalAlignment="Left" VerticalAlignment="Top" />
+
+            <Grid Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    <Label Grid.Column="0" Content="Total Scores" HorizontalAlignment="Center" VerticalAlignment="Center"  FontSize="18" Margin="10, 10, 10, 10" />
+                    <Label Grid.Column="1" Content="{Binding TotalScore}" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="18" Margin="10, 10, 10, 10" />
+                </Grid>
+
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    <Label Grid.Column="0" Content="Correct Answer: " HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="12" Margin="10, 10, 10, 10" />
+                    <Label Grid.Column="2" Content="Wrong Answer: "  HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="12" Margin="10, 10, 10, 10" />
+                    <Label Grid.Column="1" Content="{Binding CorrectCount}" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="12" Margin="10, 10, 10, 10" />
+                    <Label Grid.Column="3" Content="{Binding WrongCount}"   HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="12" Margin="10, 10, 10, 10" />
+                </Grid>
+            </Grid>
+        </Grid>
     </materialDesign:Card>
 </UserControl>
