--- a/Modules/FlashCardGame.Modules.Game/Views/TimingView.xaml
+++ b/Modules/FlashCardGame.Modules.Game/Views/TimingView.xaml
@@ -8,20 +8,18 @@
     <materialDesign:Card Background="LightSalmon" VerticalAlignment="Center" HorizontalAlignment="Center" materialDesign:ShadowAssist.ShadowDepth="Depth5" Padding="32" Margin="16">
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <materialDesign:PackIcon Kind="ProgressClock" Grid.Row="0" Height="40" Width="40" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            <materialDesign:PackIcon Kind="ProgressClock" Grid.Row="0" Height="40" Width="40" HorizontalAlignment="Left" VerticalAlignment="Top" />
             <Grid Grid.Row="1">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <Label Grid.Row="0" Content="{Binding SecondsRemaining}" Height="100" Width="100" FontSize="20" Margin="10, 10, 10, 10"/>
-                <Label Grid.Row="1" Content="seconds remaining" Height="100" Width="100" FontSize="12" Margin="10, 10, 10, 10"/>
-
+                <TextBlock Grid.Row="0" Text="{Binding SecondsRemaining}" Style="{StaticResource MaterialDesignHeadline4TextBlock}"  VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10, 10, 10, 10" />
+                <TextBlock Grid.Row="1" Text="seconds remaining" Style="{StaticResource MaterialDesignHeadline4TextBlock}"  VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="12" Margin="10, 10, 10, 10" />
             </Grid>
-
         </Grid>
     </materialDesign:Card>
 </UserControl>
