--- a/Modules/FlashCardGame.Modules.Game/Views/AnswerFeedbackView.xaml
+++ b/Modules/FlashCardGame.Modules.Game/Views/AnswerFeedbackView.xaml
@@ -17,7 +17,7 @@
                     <RowDefinition Height="4*" />
                     <RowDefinition Height="6*" />
                 </Grid.RowDefinitions>
-                <Label Grid.Row="0" Content="{Binding Feedback}" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="18" Margin="10, 10, 10, 10" />
+                <TextBlock Grid.Row="0" Text="{Binding Feedback}" Style="{StaticResource MaterialDesignHeadline6TextBlock}" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="18" Margin="10, 10, 10, 10" />
                 <materialDesign:PackIcon Kind="{Binding Icon}" HorizontalAlignment="Center" VerticalAlignment="Center" Height="{Binding IconHeight}" Width="{Binding IconWidth}" Grid.Row="1" Margin="10, 10, 10, 10" />
             </Grid>
         </Grid>
