adjust card position and size

--- a/Modules/FlashCardGame.Modules.Game/Views/AnswerFeedbackView.xaml
+++ b/Modules/FlashCardGame.Modules.Game/Views/AnswerFeedbackView.xaml
@@ -5,7 +5,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              prism:ViewModelLocator.AutoWireViewModel="True">
 
-    <materialDesign:Card Background="LightGreen" VerticalAlignment="Center" HorizontalAlignment="Center" materialDesign:ShadowAssist.ShadowDepth="Depth5" Padding="32" Margin="16">
+    <materialDesign:Card Background="LightGreen" VerticalAlignment="Top" HorizontalAlignment="Center" materialDesign:ShadowAssist.ShadowDepth="Depth5" Padding="10" Margin="10">
         <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Grid.RowDefinitions>
                 <RowDefinition Height="2*" />
