--- a/Modules/FlashCardGame.Modules.Game/Views/TimingView.xaml
+++ b/Modules/FlashCardGame.Modules.Game/Views/TimingView.xaml
@@ -5,7 +5,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              prism:ViewModelLocator.AutoWireViewModel="True">
 
-    <materialDesign:Card Background="LightSalmon" VerticalAlignment="Center" HorizontalAlignment="Center" materialDesign:ShadowAssist.ShadowDepth="Depth5" Padding="32" Margin="16">
+    <materialDesign:Card Background="LightSalmon" VerticalAlignment="Top" HorizontalAlignment="Center" materialDesign:ShadowAssist.ShadowDepth="Depth5" Padding="10" Margin="10">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
