--- a/Modules/FlashCardGame.Modules.Game/Views/QuestionView.xaml
+++ b/Modules/FlashCardGame.Modules.Game/Views/QuestionView.xaml
@@ -24,10 +24,10 @@
                 <materialDesign:PackIcon Kind ="{Binding Question.OpCtx.Icon}" Grid.Column="1" Height="{Binding IconHeight}" Width="{Binding IconWidth}" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 <TextBlock x:Name="Number2Text" Style="{StaticResource MaterialDesignHeadline4TextBlock}" Grid.Column="2"   Text="{Binding Question.Pair.Number2}" HorizontalAlignment="Left" VerticalAlignment="Center" />
             </Grid>
-            <controls:NumericTextBox Grid.Row="2" Margin="20 20 20 20" VerticalAlignment="Center" HorizontalAlignment="Stretch"
+            <controls:NumericTextBox Grid.Row="2" Margin="10 5 10 5" VerticalAlignment="Center" HorizontalAlignment="Stretch"
                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Your Answer"
                      Text="{Binding Answer, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True, ValidatesOnDataErrors=True, ValidatesOnExceptions=True, ConverterCulture='en-US', StringFormat='F2'}"
-                           IsDecimalAllowed="True" MaxLength="20" Scale="2" IsEnabled="True">
+                           FontSize="20" IsDecimalAllowed="True" MaxLength="10" Scale="2" IsEnabled="True">
                 <controls:NumericTextBox.InputBindings>
                     <KeyBinding Key="Enter" Command="{Binding SubmitAnswerCommand}" />
                 </controls:NumericTextBox.InputBindings>
@@ -38,15 +38,15 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="0">
-                    <Button Grid.Row="0" Grid.Column="0" Command="{Binding StartNewGameCommand}" Margin="10, 10, 10, 10" Content="Start New Game" />
+                    <Button Grid.Row="0" Grid.Column="0" Command="{Binding StartNewGameCommand}" VerticalAlignment="Center" Margin="10, 5, 10, 5" Content="Start New Game" />
                 </Grid>
                 <Grid Grid.Row="1">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <Button Grid.Row="1" Grid.Column="0" Command="{Binding SubmitAnswerCommand}" Margin="10, 10, 10, 10" Content="Submit Answer" />
-                    <Button Grid.Row="1" Grid.Column="1" Command="{Binding NextQuestionCommand}" Margin="10, 10, 10, 10" Content="Next Question" />
+                    <Button Grid.Row="1" Grid.Column="0" Command="{Binding SubmitAnswerCommand}" VerticalAlignment="Center" Margin="10, 5, 10, 5" Content="Submit Answer" />
+                    <Button Grid.Row="1" Grid.Column="1" Command="{Binding NextQuestionCommand}" VerticalAlignment="Center" Margin="10, 5, 10, 5" Content="Next Question" />
                 </Grid>
             </Grid>
         </Grid>
