--- a/Modules/FlashCardGame.Modules.Game/Views/AnswerFeedbackView.xaml
+++ b/Modules/FlashCardGame.Modules.Game/Views/AnswerFeedbackView.xaml
@@ -18,7 +18,7 @@
                     <RowDefinition Height="6*" />
                 </Grid.RowDefinitions>
                 <TextBlock Grid.Row="0" Text="{Binding Feedback}" Style="{StaticResource MaterialDesignHeadline6TextBlock}" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="18" Margin="10, 10, 10, 10" />
-                <materialDesign:PackIcon Kind="{Binding Icon}" HorizontalAlignment="Center" VerticalAlignment="Center" Height="{Binding IconHeight}" Width="{Binding IconWidth}" Grid.Row="1" Margin="10, 10, 10, 10" />
+                <materialDesign:PackIcon Kind="{Binding Icon}" HorizontalAlignment="Center" VerticalAlignment="Center" Height="40" Width="40" Grid.Row="1" Margin="10, 10, 10, 10" />
             </Grid>
         </Grid>
     </materialDesign:Card>
