--- a/Modules/FlashCardGame.Modules.Game/Views/QuestionView.xaml
+++ b/Modules/FlashCardGame.Modules.Game/Views/QuestionView.xaml
@@ -21,7 +21,7 @@
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <TextBlock x:Name="Number1Text" Style="{StaticResource MaterialDesignHeadline4TextBlock}" Grid.Column="0"   Text="{Binding Question.Pair.Number1}" HorizontalAlignment="Right" VerticalAlignment="Center" />
-                <materialDesign:PackIcon Kind ="{Binding Question.OpCtx.Icon}" Grid.Column="1" Height="{Binding IconHeight}" Width="{Binding IconWidth}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                <materialDesign:PackIcon Kind ="{Binding Icon}" Grid.Column="1" Height="40" Width="40" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 <TextBlock x:Name="Number2Text" Style="{StaticResource MaterialDesignHeadline4TextBlock}" Grid.Column="2"   Text="{Binding Question.Pair.Number2}" HorizontalAlignment="Left" VerticalAlignment="Center" />
             </Grid>
             <controls:NumericTextBox Grid.Row="2" Margin="10 5 10 5" VerticalAlignment="Center" HorizontalAlignment="Stretch"
